# lucid-runtime

./: .gitignore  Cargo.toml  README.md  Tiltfile  lucid-runtime.code-workspace  mypy.ini  pyproject.toml  pyrightconfig.json  spec.md
apps/coordinator/: Cargo.toml  Dockerfile  README.md
apps/coordinator/src/: api_internal.rs  api_public.rs  auth.rs  capabilities.rs  config.rs  lib.rs  livekit_tokens.rs  main.rs  modal_dispatch.rs  models.rs  registry.rs  state.rs
apps/coordinator/src/sessions/: mod.rs  reconciler.rs  store.rs
apps/coordinator/src/workers/: store.rs
apps/demo/: .env.example  README.md  components.json  index.html  package.json  vite.config.ts
apps/demo/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/demo/src/components/: console-room.tsx  environment-studio.tsx  input-overlay.tsx  session-room.tsx  waypoint-controls.tsx
apps/demo/src/components/ui/: select.tsx
apps/demo/src/lib/: coordinator.ts  env.ts  environments.ts  input-files.ts  lucid.ts  protocol.ts  waypoint.ts
apps/worker/: Dockerfile  README.md  pyproject.toml
apps/worker/scripts/: start-worker.sh
apps/worker/src/wm_worker/: __init__.py  action_buffer.py  config.py  coordinator_client.py  frame_pipeline.py  health_server.py  livekit_adapter.py  main.py  modal_app.py  modal_dispatch_api.py  models.py  protocol.py  runner.py  session_control.py  session_runner.py  session_status.py  yume_engine.py  yume_prompt.py  yume_single_gpu_runtime.py
apps/worker/tests/: test_action_buffer.py  test_config.py  test_coordinator_client.py  test_frame_pipeline.py  test_modal_app.py  test_modal_dispatch_api.py  test_protocol.py  test_session_control.py  test_session_runner.py  test_yume_gpu_smoke.py  test_yume_prompt.py  test_yume_single_gpu_runtime.py
deploy/ec2/: .gitignore  README.md  common.sh  coordinator.env.example  coordinator.models.example.json  deploy.sh  run-coordinator.sh
deploy/helm/lucid-runtime/: Chart.yaml  values.dev.yaml  values.yaml
deploy/helm/lucid-runtime/templates/: _helpers.tpl  coordinator-deployment.yaml  coordinator-service.yaml  worker-deployment.yaml
deploy/modal/: .env.example  README.md  common.sh  create-volumes.sh  deploy.sh  download-model.sh  flash-attn-smoke.sh  logs.sh  serve.sh  stop.sh
examples/helios_modal/: README.md  modal.env.example  pyproject.toml
examples/helios_modal/src/helios_modal_example/: __init__.py  config.py  engine.py  modal_app.py  model.py
examples/helios_modal/tests/: conftest.py  test_helios_config.py  test_helios_engine.py  test_helios_model.py
examples/waypoint_modal/: README.md  modal.env.example  pyproject.toml
examples/waypoint_modal/src/waypoint_modal_example/: __init__.py  config.py  engine.py  modal_app.py  model.py
examples/waypoint_modal/src/waypoint_modal_example/configs/: waypoint.yaml
examples/waypoint_modal/tests/: conftest.py  test_waypoint_model.py
examples/yume_modal/: Dockerfile  README.md  modal.env.example  pyproject.toml
examples/yume_modal/scripts/: start-worker.sh
examples/yume_modal/src/yume_modal_example/: __init__.py  config.py  engine.py  modal_app.py  model.py  single_gpu_runtime.py
examples/yume_modal/src/yume_modal_example/configs/: yume.yaml
examples/yume_modal/tests/: test_yume_engine.py  test_yume_gpu_smoke.py  test_yume_model.py  test_yume_single_gpu_runtime.py
scripts/: build_fp4_package.py  generate_lucid_artifacts.py
scripts/templates/: load_prequant.py
