[project]
name = "lucid-runtime-monorepo"
version = "0.1.0"
description = "Shared analysis environment for the Lucid Python monorepo"
requires-python = ">=3.11,<3.12"
dependencies = [
  "basedpyright>=1.31,<2",
  "mypy>=1.18,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<0.25",
  "types-PyYAML>=6.0.12.20250915",
  "lucid-runtime[livekit,modal]>=0.1,<0.2",
  "waypoint-modal-example>=0.1,<0.2",
  "helios-modal-example>=0.1,<0.2",
  "yume-modal-example>=0.1,<0.2",
]

[tool.uv]
package = false

[tool.uv.sources]
lucid-runtime = { path = "packages/lucid", editable = true }
waypoint-modal-example = { path = "examples/waypoint_modal", editable = true }
helios-modal-example = { path = "examples/helios_modal", editable = true }
yume-modal-example = { path = "examples/yume_modal", editable = true }
