[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "wm-worker"
version = "0.1.0"
description = "Lucid runtime GPU worker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
wm-worker = "wm_worker.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
