[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "wm-worker"
version = "0.1.0"
description = "Lucid runtime GPU worker"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "aiohttp>=3.10,<4",
  "httpx>=0.27,<1",
  "numpy>=1.26,<3",
  "pydantic>=2.8,<3",
]

[project.optional-dependencies]
livekit = [
  "livekit>=0.13,<0.14",
  "av>=13,<14",
]
yume = [
  "torch>=2.5,<2.6",
  "torchvision>=0.20,<0.21",
  "diffusers>=0.32,<0.33",
  "transformers>=4.46,<4.47",
  "einops>=0.8,<0.9",
  "decord>=0.6,<0.7",
  "safetensors>=0.5,<0.6",
]
test = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<0.25",
]

[project.scripts]
wm-worker = "wm_worker.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
