[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "helios-modal-example"
version = "0.1.0"
description = "Example Helios model port using the Lucid runtime library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "lucid-runtime[modal]>=0.1,<0.2",
  "modal>=1.3.5",
  "numpy>=1.26,<3",
  "pydantic>=2.8,<3",
]

[project.optional-dependencies]
helios = [
  "torch==2.10.0",
  "torchvision==0.25.0",
  "torchaudio==2.10.0",
  "accelerate>=1.12.0",
  "diffusers @ git+https://github.com/huggingface/diffusers.git",
  "ftfy",
  "huggingface-hub>=0.36.0",
  "imageio>=2.36.0",
  "imageio-ffmpeg>=0.5.1",
  "safetensors>=0.5.0",
  "sentencepiece>=0.2.0",
  "transformers>=4.57.0",
]
test = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<0.25",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[tool.uv.sources]
lucid-runtime = { path = "../../packages/lucid", editable = true }
