[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "waypoint-modal-example"
version = "0.1.0"
description = "Example Waypoint model port using the Lucid runtime library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "lucid-modal>=0.1,<0.2",
  "lucid-runtime>=0.1,<0.2",
  "modal>=1.3.5",
  "numpy>=1.26,<3",
  "pillow>=10,<12",
  "pydantic>=2.8,<3",
]

[project.optional-dependencies]
waypoint = [
  "torch==2.10.0",
  "torchvision==0.25.0",
  "torchaudio==2.10.0",
  "einops",
  "rotary-embedding-torch>=0.8.8",
  "tensordict==0.10.0",
  "transformers==4.57.3",
  "ftfy",
  "diffusers",
  "huggingface-hub==0.36.0",
  "omegaconf",
  "accelerate==1.12.0",
  "world_engine @ git+https://github.com/Overworldai/world_engine.git@a30a00c302380c0f657347e8456bb6837ff37c22",
]
test = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<0.25",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
waypoint_modal_example = ["configs/*.yaml"]

[tool.uv]
package = true

[tool.uv.sources]
lucid-modal = { path = "../../packages/lucid-modal", editable = true }
lucid-runtime = { path = "../../packages/lucid", editable = true }
