[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "yume-modal-example"
version = "0.1.0"
description = "Example Yume model port using the Lucid runtime library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "lucid-runtime[modal]>=0.1,<0.2",
  "modal>=1.3.5",
  "numpy>=1.26,<3",
  "pydantic>=2.8,<3",
]

[project.optional-dependencies]
yume = [
  "torch>=2.5,<2.6",
  "torchvision>=0.20,<0.21",
  "accelerate==1.0.1",
  "diffusers>=0.32,<0.33",
  "transformers>=4.46,<4.47",
  "einops>=0.8,<0.9",
  "decord>=0.6,<0.7",
  "safetensors>=0.5,<0.6",
  "easydict>=1.13,<2",
  "ftfy>=6.3,<7",
  "imageio==2.36.0",
  "imageio-ffmpeg==0.5.1",
  "peft==0.13.2",
  "sentencepiece>=0.2,<0.3",
]
test = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<0.25",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
yume_modal_example = ["configs/*.yaml"]

[tool.uv]
package = true

[tool.uv.sources]
lucid-runtime = { path = "../../packages/lucid", editable = true }
